Doc2Vec, HDBSCAN und BERTopic angepasst.

--- a/AsuD_CAPTUM_v0.1.ipynb
+++ b/AsuD_CAPTUM_v0.1.ipynb
@@ -46,29 +46,24 @@
         "# pip installs. Wenn Schon installiert, dann einfach nicht ausführen\n",
         "!pip install networkx\n",
         "\n",
-        "!pip install spacy==3.1.0\n",
-        "!pip install scispacy==0.4.0\n",
+        "!pip install spacy\n",
+        "!pip install scispacy\n",
         "!pip install https://s3-us-west-2.amazonaws.com/ai2-s2-scispacy/releases/v0.4.0/en_ner_bionlp13cg_md-0.4.0.tar.gz\n",
         "!pip install https://s3-us-west-2.amazonaws.com/ai2-s2-scispacy/releases/v0.4.0/en_core_sci_sm-0.4.0.tar.gz\n",
         "\n",
         "!pip install wordcloud\n",
-        "!pip install bertopic[all]\n",
         "\n",
+        "!pip install -q flair\n",
         "!pip install -q numpy\n",
         "!pip install -q pandas\n",
         "!pip install -q gensim\n",
-        "!pip install -q pynndescent>=0.4\n",
-        "!pip install -q umap-learn\n",
         "!pip install -q hdbscan\n",
-        "!pip install -q wordcloud\n",
+        "!pip install -q bertopic\n",
         "!pip install -q tensorflow\n",
         "!pip install -q tensorflow_hub\n",
         "!pip install -q tensorflow_text\n",
         "!pip install -q torch\n",
-        "!pip install -q sentence_transformers\n",
-        "!pip install -q hnswlib\n",
-        "!pip install -q joblib<1.0.0\n",
-        "!pip install -q top2vec[sentence_transformers]"
+        "!pip install -q sentence_transformers"
       ],
       "id": "gBuZujwlr9cn",
       "execution_count": null,
@@ -877,6 +872,38 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "fj47Zp5HHis1"
+      },
+      "source": [
+        "#Ursprüngliche Idee einen BiomedNLP-PubMedBERT zu nutzen um das Embedding zu erstellen.\n",
+        "from flair.embeddings import TransformerDocumentEmbeddings\n",
+        "\n",
+        "#@title Transformer für das Embedding in BERtopic\n",
+        "Transformer = \"microsoft/BiomedNLP-PubMedBERT-base-uncased-abstract-fulltext\" #@param {type:\"string\"}\n",
+        "LoadedTransformer = TransformerDocumentEmbeddings(Transformer)"
+      ],
+      "id": "fj47Zp5HHis1",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "YRBqbFp4M-E3"
+      },
+      "source": [
+        "from flair.embeddings import WordEmbeddings, DocumentPoolEmbeddings\n",
+        "\n",
+        "glove_embedding = WordEmbeddings('crawl')\n",
+        "document_glove_embeddings = DocumentPoolEmbeddings([glove_embedding])"
+      ],
+      "id": "YRBqbFp4M-E3",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "ELTFNj8VXCAQ"
       },
       "source": [
@@ -909,7 +936,7 @@
         "id": "vVP7-geA6HXx"
       },
       "source": [
-        "topic_freq.head()"
+        "topic_freq"
       ],
       "id": "vVP7-geA6HXx",
       "execution_count": null,
@@ -933,7 +960,7 @@
         "id": "9EDrpSkB64rL"
       },
       "source": [
-        "topic_model.get_topic(topic_freq['Topic'].iloc[1])"
+        "topic_model.get_topic(topic_freq['Topic'].iloc[0])"
       ],
       "id": "9EDrpSkB64rL",
       "execution_count": null,
@@ -969,6 +996,7 @@
         "id": "dNR9_lgr6Rnw"
       },
       "source": [
+        "!pip install top2vec\n",
         "import numpy as np\n",
         "import pandas as pd\n",
         "from copy import deepcopy\n",
@@ -985,7 +1013,7 @@
       },
       "source": [
         "docs = list(df[\"Corpus\"].values)\n",
-        "docs[:5]"
+        "docs[:5] #print top 5 papers"
       ],
       "id": "M0Rivd9R6bDL",
       "execution_count": null,
@@ -1091,12 +1119,15 @@
         "id": "eNRSmUBR02VV"
       },
       "source": [
+        "#@title Anzahl der ähnlichen Wörter pro gesuchtem Keyword\n",
+        "number_of_similar_words =  50 #@param {type:\"integer\"}\n",
+        "\n",
         "similarity_dict = []\n",
         "not_learned_by_model = []\n",
         "\n",
         "for word in searchable_keywords:\n",
         "  try: \n",
-        "    words, word_scores = model.similar_words(keywords=[word], keywords_neg=[], num_words=20)\n",
+        "    words, word_scores = model.similar_words(keywords=[word], keywords_neg=[], num_words=number_of_similar_words)\n",
         "    similarity_dict.append({word:dict(zip(words,word_scores))})\n",
         "    next\n",
         "  except ValueError:\n",
@@ -1237,18 +1268,6 @@
         "    silhouettes.append(silhouette_avg)\n"
       ],
       "id": "3a8567ca",
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "88kWs0WU66pk"
-      },
-      "source": [
-        ""
-      ],
-      "id": "88kWs0WU66pk",
       "execution_count": null,
       "outputs": []
     },
@@ -1431,18 +1450,6 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "zTxzTDWMYt0k"
-      },
-      "source": [
-        "!pip install hdbscan"
-      ],
-      "id": "zTxzTDWMYt0k",
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
         "id": "VVPZHY6XfB0X"
       },
       "source": [
@@ -1462,7 +1469,7 @@
       "source": [
         "import umap\n",
         "umap_embeddings = umap.UMAP(n_neighbors=20, \n",
-        "                            n_components=2,\n",
+        "                            n_components=4,\n",
         "                            metric='cosine').fit_transform(embeddings)"
       ],
       "id": "i2xVsp0mcTzr",
@@ -1476,7 +1483,7 @@
       },
       "source": [
         "import hdbscan\n",
-        "clusterer = hdbscan.HDBSCAN(min_cluster_size=2,\n",
+        "clusterer = hdbscan.HDBSCAN(min_cluster_size=20,\n",
         "                          metric='euclidean',                      \n",
         "                          cluster_selection_method='eom')\n",
         "cluster = clusterer.fit(umap_embeddings)"
@@ -1492,7 +1499,7 @@
       },
       "source": [
         "# Prepare data\n",
-        "umap_data = umap.UMAP(n_neighbors=20, n_components=2, min_dist=0.2, metric='cosine').fit_transform(embeddings)\n",
+        "umap_data = umap.UMAP(n_neighbors=10, n_components=2, min_dist=0.1, metric='cosine').fit_transform(embeddings)\n",
         "result = pd.DataFrame(umap_data, columns=['x', 'y'])\n",
         "result['labels'] = cluster.labels_"
       ],
@@ -1510,7 +1517,7 @@
         "fig, ax = plt.subplots(figsize=(20, 10))\n",
         "outliers = result.loc[result.labels == -1, :]\n",
         "clustered = result.loc[result.labels != -1, :]\n",
-        "plt.scatter(outliers.x, outliers.y, color='#BDBDBD', s=15)\n",
+        "plt.scatter(outliers.x, outliers.y, color='#000000', s=15)\n",
         "plt.scatter(clustered.x, clustered.y, c=clustered.labels, s=15, cmap='hsv_r')\n",
         "plt.colorbar()"
       ],
