HDBSCAN Plots überarbeitet

--- a/AsuD_CAPTUM_v0.1.ipynb
+++ b/AsuD_CAPTUM_v0.1.ipynb
@@ -1453,8 +1453,15 @@
         "id": "VVPZHY6XfB0X"
       },
       "source": [
+        "#Es wurden die folgenden Transformer getestet:\n",
+        "# 1. allenai/sciber_scivocab_uncased\n",
+        "# 2. allenai/specter\n",
+        "# 3. microsoft/BiomedNLP-PubMedBERT-base-uncased-abstract-fulltext\n",
+        "\n",
+        "#@title Transformer für Embedding\n",
+        "transformer_name = \"microsoft/BiomedNLP-PubMedBERT-base-uncased-abstract-fulltext\" #@param {type:\"string\"}\n",
         "from sentence_transformers import SentenceTransformer\n",
-        "model = SentenceTransformer('allenai-specter')\n",
+        "model = SentenceTransformer(transformer_name)\n",
         "embeddings = model.encode(df['Corpus_w_Punctuation'], show_progress_bar=True)"
       ],
       "id": "VVPZHY6XfB0X",
@@ -1468,8 +1475,8 @@
       },
       "source": [
         "import umap\n",
-        "umap_embeddings = umap.UMAP(n_neighbors=20, \n",
-        "                            n_components=4,\n",
+        "umap_embeddings = umap.UMAP(n_neighbors=12, \n",
+        "                            n_components=2,\n",
         "                            metric='cosine').fit_transform(embeddings)"
       ],
       "id": "i2xVsp0mcTzr",
@@ -1483,7 +1490,7 @@
       },
       "source": [
         "import hdbscan\n",
-        "clusterer = hdbscan.HDBSCAN(min_cluster_size=20,\n",
+        "clusterer = hdbscan.HDBSCAN(min_cluster_size=5,\n",
         "                          metric='euclidean',                      \n",
         "                          cluster_selection_method='eom')\n",
         "cluster = clusterer.fit(umap_embeddings)"
@@ -1499,7 +1506,7 @@
       },
       "source": [
         "# Prepare data\n",
-        "umap_data = umap.UMAP(n_neighbors=10, n_components=2, min_dist=0.1, metric='cosine').fit_transform(embeddings)\n",
+        "umap_data = umap.UMAP(n_neighbors=12, n_components=2, min_dist=0.0, metric='cosine').fit_transform(embeddings)\n",
         "result = pd.DataFrame(umap_data, columns=['x', 'y'])\n",
         "result['labels'] = cluster.labels_"
       ],
@@ -1517,9 +1524,11 @@
         "fig, ax = plt.subplots(figsize=(20, 10))\n",
         "outliers = result.loc[result.labels == -1, :]\n",
         "clustered = result.loc[result.labels != -1, :]\n",
-        "plt.scatter(outliers.x, outliers.y, color='#000000', s=15)\n",
-        "plt.scatter(clustered.x, clustered.y, c=clustered.labels, s=15, cmap='hsv_r')\n",
-        "plt.colorbar()"
+        "plt.scatter(outliers.x, outliers.y, color='#BEBEBE', s=5)\n",
+        "plt.scatter(clustered.x, clustered.y, c=clustered.labels, s=20, cmap=plt.cm.get_cmap('hsv_r', len(set(clustered.labels))))\n",
+        "plt.colorbar(ticks=range(len(set(clustered.labels))+1), label='Cluster')\n",
+        "plt.axis('off')\n",
+        "plt.clim(-0.5, (len(set(clustered.labels))+.5))"
       ],
       "id": "CDjACwdYaU6f",
       "execution_count": null,
