Anpassungen bei der Visualisierung vom HDBSCAN Output

--- a/AsuD_CAPTUM_v0.1.ipynb
+++ b/AsuD_CAPTUM_v0.1.ipynb
@@ -1454,12 +1454,12 @@
       },
       "source": [
         "#Es wurden die folgenden Transformer getestet:\n",
-        "# 1. allenai/sciber_scivocab_uncased\n",
+        "# 1. allenai/scibert_scivocab_uncased\n",
         "# 2. allenai/specter\n",
         "# 3. microsoft/BiomedNLP-PubMedBERT-base-uncased-abstract-fulltext\n",
         "\n",
         "#@title Transformer für Embedding\n",
-        "transformer_name = \"microsoft/BiomedNLP-PubMedBERT-base-uncased-abstract-fulltext\" #@param {type:\"string\"}\n",
+        "transformer_name = \"allenai/specter\" #@param {type:\"string\"}\n",
         "from sentence_transformers import SentenceTransformer\n",
         "model = SentenceTransformer(transformer_name)\n",
         "embeddings = model.encode(df['Corpus_w_Punctuation'], show_progress_bar=True)"
@@ -1533,16 +1533,6 @@
       "id": "CDjACwdYaU6f",
       "execution_count": null,
       "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "4mvRgWS3CPlj"
-      },
-      "source": [
-        ""
-      ],
-      "id": "4mvRgWS3CPlj"
     },
     {
       "cell_type": "markdown",
