BERTopic angepasst. Verschiedene Transformer können getestet werden.

--- a/AsuD_CAPTUM_v0.1.ipynb
+++ b/AsuD_CAPTUM_v0.1.ipynb
@@ -62,6 +62,7 @@
         "!pip install -q tensorflow\n",
         "!pip install -q tensorflow_hub\n",
         "!pip install -q tensorflow_text\n",
+        "!pip install -q top2vec\n",
         "!pip install -q torch\n",
         "!pip install -q sentence_transformers"
       ],
@@ -76,13 +77,23 @@
       },
       "source": [
         "%matplotlib inline\n",
-        "import matplotlib.pyplot as plt\n",
-        "import nltk, os\n",
-        "import pandas as pd\n",
-        "import numpy as np\n",
+        "\n",
         "import re\n",
+        "import os\n",
+        "import nltk\n",
+        "import umap\n",
+        "import hdbscan\n",
+        "import shutil\n",
+        "\n",
+        "import numpy as np\n",
+        "import pandas as pd\n",
+        "import matplotlib.pyplot as plt\n",
+        "\n",
+        "from copy import deepcopy\n",
+        "from top2vec import Top2Vec\n",
+        "from bertopic import BERTopic\n",
         "from collections import Counter\n",
-        "import shutil"
+        "from sentence_transformers import SentenceTransformer\n"
       ],
       "id": "21aa3cc8",
       "execution_count": null,
@@ -860,44 +871,21 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "xdOCH0kszsfi"
-      },
-      "source": [
-        "from bertopic import BERTopic"
-      ],
-      "id": "xdOCH0kszsfi",
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
         "id": "fj47Zp5HHis1"
       },
       "source": [
-        "#Ursprüngliche Idee einen BiomedNLP-PubMedBERT zu nutzen um das Embedding zu erstellen.\n",
-        "from flair.embeddings import TransformerDocumentEmbeddings\n",
-        "\n",
-        "#@title Transformer für das Embedding in BERtopic\n",
-        "Transformer = \"microsoft/BiomedNLP-PubMedBERT-base-uncased-abstract-fulltext\" #@param {type:\"string\"}\n",
-        "LoadedTransformer = TransformerDocumentEmbeddings(Transformer)"
+        "#@title Transformer für das Embedding in BERTopic\n",
+        "#Es wurden die folgenden Transformer getestet:\n",
+        "# 1. allenai/scibert_scivocab_uncased\n",
+        "# 2. allenai/specter\n",
+        "# 3. microsoft/BiomedNLP-PubMedBERT-base-uncased-abstract-fulltext\n",
+        "# 4. paraphrase-MiniLM-L6-v2    -->> Fast\n",
+        "transformer_name = \"paraphrase-MiniLM-L6-v2\" #@param {type:\"string\"}\n",
+        "model = SentenceTransformer(transformer_name)\n",
+        "docs = df['Corpus']\n",
+        "embeddings = model.encode(docs, show_progress_bar=True)\n"
       ],
       "id": "fj47Zp5HHis1",
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "YRBqbFp4M-E3"
-      },
-      "source": [
-        "from flair.embeddings import WordEmbeddings, DocumentPoolEmbeddings\n",
-        "\n",
-        "glove_embedding = WordEmbeddings('crawl')\n",
-        "document_glove_embeddings = DocumentPoolEmbeddings([glove_embedding])"
-      ],
-      "id": "YRBqbFp4M-E3",
       "execution_count": null,
       "outputs": []
     },
@@ -907,8 +895,8 @@
         "id": "ELTFNj8VXCAQ"
       },
       "source": [
-        "topic_model = BERTopic(language=\"english\", calculate_probabilities=True) # We need the probabilities to visualize\n",
-        "topics = topic_model.fit_transform(list(df['Corpus_w_Punctuation']))"
+        "topic_model = BERTopic(language=\"english\", calculate_probabilities=True, seed_topic_list = list(tags), verbose=True) # We need the probabilities to visualize\n",
+        "topics, probs = topic_model.fit_transform(docs, embeddings)"
       ],
       "id": "ELTFNj8VXCAQ",
       "execution_count": null,
@@ -936,7 +924,7 @@
         "id": "vVP7-geA6HXx"
       },
       "source": [
-        "topic_freq"
+        "topic_model.get_topic_info()"
       ],
       "id": "vVP7-geA6HXx",
       "execution_count": null,
@@ -960,7 +948,7 @@
         "id": "9EDrpSkB64rL"
       },
       "source": [
-        "topic_model.get_topic(topic_freq['Topic'].iloc[0])"
+        "topic_model.get_topics()"
       ],
       "id": "9EDrpSkB64rL",
       "execution_count": null,
@@ -989,22 +977,6 @@
         "Quelle: https://github.com/bhattbhavesh91/Top2Vec-Demo/blob/main/Top2Vec-Notebook.ipynb"
       ],
       "id": "HoXi6ici5_qs"
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "dNR9_lgr6Rnw"
-      },
-      "source": [
-        "!pip install top2vec\n",
-        "import numpy as np\n",
-        "import pandas as pd\n",
-        "from copy import deepcopy\n",
-        "from top2vec import Top2Vec"
-      ],
-      "id": "dNR9_lgr6Rnw",
-      "execution_count": null,
-      "outputs": []
     },
     {
       "cell_type": "code",
@@ -1450,6 +1422,18 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "rlYPHGjFuvXc"
+      },
+      "source": [
+        ""
+      ],
+      "id": "rlYPHGjFuvXc",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "VVPZHY6XfB0X"
       },
       "source": [
@@ -1459,8 +1443,8 @@
         "# 3. microsoft/BiomedNLP-PubMedBERT-base-uncased-abstract-fulltext\n",
         "\n",
         "#@title Transformer für Embedding\n",
-        "transformer_name = \"allenai/specter\" #@param {type:\"string\"}\n",
-        "from sentence_transformers import SentenceTransformer\n",
+        "transformer_name = \"allenai/scibert_scivocab_uncased\" #@param {type:\"string\"}\n",
+        "\n",
         "model = SentenceTransformer(transformer_name)\n",
         "embeddings = model.encode(df['Corpus_w_Punctuation'], show_progress_bar=True)"
       ],
@@ -1474,7 +1458,6 @@
         "id": "i2xVsp0mcTzr"
       },
       "source": [
-        "import umap\n",
         "umap_embeddings = umap.UMAP(n_neighbors=12, \n",
         "                            n_components=2,\n",
         "                            metric='cosine').fit_transform(embeddings)"
@@ -1489,7 +1472,6 @@
         "id": "2Nhu1hksZRRu"
       },
       "source": [
-        "import hdbscan\n",
         "clusterer = hdbscan.HDBSCAN(min_cluster_size=5,\n",
         "                          metric='euclidean',                      \n",
         "                          cluster_selection_method='eom')\n",
