Überarbeiten des BERTopic

--- a/AsuD_CAPTUM_v0.1.ipynb
+++ b/AsuD_CAPTUM_v0.1.ipynb
@@ -81,19 +81,21 @@
         "import re\n",
         "import os\n",
         "import nltk\n",
-        "import umap\n",
-        "import hdbscan\n",
+        "\n",
         "import shutil\n",
         "\n",
         "import numpy as np\n",
         "import pandas as pd\n",
         "import matplotlib.pyplot as plt\n",
         "\n",
+        "from umap import UMAP\n",
+        "from hdbscan import HDBSCAN\n",
         "from copy import deepcopy\n",
         "from top2vec import Top2Vec\n",
         "from bertopic import BERTopic\n",
         "from collections import Counter\n",
-        "from sentence_transformers import SentenceTransformer\n"
+        "from sentence_transformers import SentenceTransformer\n",
+        "from sklearn.feature_extraction.text import CountVectorizer\n"
       ],
       "id": "21aa3cc8",
       "execution_count": null,
@@ -853,7 +855,9 @@
       },
       "source": [
         "### **BERTopic** \n",
-        "Topic modeling mit BERTopic -> siehe: https://towardsdatascience.com/topic-modeling-with-bert-779f7db187e6"
+        "Topic modeling mit BERTopic -> siehe: https://towardsdatascience.com/topic-modeling-with-bert-779f7db187e6\n",
+        "\n",
+        "c-TF-IDF (Class based TF-IDF): https://towardsdatascience.com/creating-a-class-based-tf-idf-with-scikit-learn-caea7b15b858"
       ],
       "id": "rjf-SfSvy_hP"
     },
@@ -880,12 +884,35 @@
         "# 2. allenai/specter\n",
         "# 3. microsoft/BiomedNLP-PubMedBERT-base-uncased-abstract-fulltext\n",
         "# 4. paraphrase-MiniLM-L6-v2    -->> Fast\n",
+        "\n",
         "transformer_name = \"paraphrase-MiniLM-L6-v2\" #@param {type:\"string\"}\n",
-        "model = SentenceTransformer(transformer_name)\n",
-        "docs = df['Corpus']\n",
-        "embeddings = model.encode(docs, show_progress_bar=True)\n"
+        "korpus_name = \"Content\" #@param {type:\"string\"}\n",
+        "\n",
+        "transformer_model = SentenceTransformer(transformer_name)\n",
+        "docs = df[korpus_name]\n",
+        "embeddings = transformer_model.encode(docs, show_progress_bar=True)"
       ],
       "id": "fj47Zp5HHis1",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "RqbhA8K2S3Cm"
+      },
+      "source": [
+        "umap_model = UMAP(n_neighbors=15, \n",
+        "                 n_components=2,\n",
+        "                 metric='cosine')\n",
+        "\n",
+        "hdbscan_model = HDBSCAN(min_cluster_size=10,\n",
+        "                          metric='euclidean',                      \n",
+        "                          cluster_selection_method='eom', prediction_data=True)\n",
+        "\n",
+        "vectorizer_model = CountVectorizer(ngram_range=(1, 2), stop_words=\"english\", min_df=2)\n"
+      ],
+      "id": "RqbhA8K2S3Cm",
       "execution_count": null,
       "outputs": []
     },
@@ -895,10 +922,28 @@
         "id": "ELTFNj8VXCAQ"
       },
       "source": [
-        "topic_model = BERTopic(language=\"english\", calculate_probabilities=True, seed_topic_list = list(tags), verbose=True) # We need the probabilities to visualize\n",
+        "topic_model = BERTopic(language=\"english\", \n",
+        "                       calculate_probabilities=True,    # We need the probabilities to visualize\n",
+        "                       #seed_topic_list = list(tags),\n",
+        "                       umap_model = umap_model,\n",
+        "                       hdbscan_model = hdbscan_model,\n",
+        "                       vectorizer_model = vectorizer_model\n",
+        "                       )\n",
         "topics, probs = topic_model.fit_transform(docs, embeddings)"
       ],
       "id": "ELTFNj8VXCAQ",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Qkupql2cXP6u"
+      },
+      "source": [
+        "topic_freq"
+      ],
+      "id": "Qkupql2cXP6u",
       "execution_count": null,
       "outputs": []
     },
@@ -910,23 +955,16 @@
       "source": [
         "# Get the most frequent topics\n",
         "topic_freq = topic_model.get_topic_freq()\n",
-        "outliers = topic_freq['Count'][topic_freq['Topic']==-1].iloc[0]\n",
-        "print(f\"{outliers} documents have not been classified\")\n",
-        "print(f\"The other {topic_freq['Count'].sum() - outliers} documents are {topic_freq['Topic'].shape[0]-1} topics\")"
+        "if sum(n < 0 for n in topic_freq['Topic']) > 0:\n",
+        "  outliers = topic_freq['Count'][topic_freq['Topic']==-1].iloc[0]\n",
+        "  print(f\"{outliers} documents have not been classified.\")\n",
+        "  print(f\"The other {topic_freq['Count'].sum() - outliers} documents are {topic_freq['Topic'].shape[0]-1} topics.\")\n",
+        "else:\n",
+        "  outliers = 0\n",
+        "  print(f\"All documents have been classified.\")\n",
+        "  print(f\"The {topic_freq['Count'].sum()} documents are classified into {topic_freq['Topic'].shape[0]} topics.\")"
       ],
       "id": "bFiD4jIi6DZn",
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "vVP7-geA6HXx"
-      },
-      "source": [
-        "topic_model.get_topic_info()"
-      ],
-      "id": "vVP7-geA6HXx",
       "execution_count": null,
       "outputs": []
     },
@@ -936,21 +974,10 @@
         "id": "SgiYB3av6yeg"
       },
       "source": [
-        "print(f\"There are {topic_freq['Count'].iloc[1]} documents that are talking about topic ID {topic_freq['Topic'].iloc[1]}\")"
+        "for i in topic_freq['Topic']:\n",
+        "  print(f\"There are {topic_freq['Count'].iloc[i]} documents that are talking about topic ID {topic_freq['Topic'].iloc[i]}\")"
       ],
       "id": "SgiYB3av6yeg",
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "9EDrpSkB64rL"
-      },
-      "source": [
-        "topic_model.get_topics()"
-      ],
-      "id": "9EDrpSkB64rL",
       "execution_count": null,
       "outputs": []
     },
@@ -1458,7 +1485,7 @@
         "id": "i2xVsp0mcTzr"
       },
       "source": [
-        "umap_embeddings = umap.UMAP(n_neighbors=12, \n",
+        "umap_embeddings = UMAP(n_neighbors=12, \n",
         "                            n_components=2,\n",
         "                            metric='cosine').fit_transform(embeddings)"
       ],
@@ -1472,7 +1499,7 @@
         "id": "2Nhu1hksZRRu"
       },
       "source": [
-        "clusterer = hdbscan.HDBSCAN(min_cluster_size=5,\n",
+        "clusterer = HDBSCAN(min_cluster_size=5,\n",
         "                          metric='euclidean',                      \n",
         "                          cluster_selection_method='eom')\n",
         "cluster = clusterer.fit(umap_embeddings)"
@@ -1488,7 +1515,7 @@
       },
       "source": [
         "# Prepare data\n",
-        "umap_data = umap.UMAP(n_neighbors=12, n_components=2, min_dist=0.0, metric='cosine').fit_transform(embeddings)\n",
+        "umap_data = UMAP(n_neighbors=12, n_components=2, min_dist=0.0, metric='cosine').fit_transform(embeddings)\n",
         "result = pd.DataFrame(umap_data, columns=['x', 'y'])\n",
         "result['labels'] = cluster.labels_"
       ],
