Anpassungen BERTopic um beschreibendes Wort für ein Cluster

--- a/AsuD_CAPTUM_v0.1.ipynb
+++ b/AsuD_CAPTUM_v0.1.ipynb
@@ -542,6 +542,18 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "GlUtY4yKPeDp"
+      },
+      "source": [
+        "df['Tags']"
+      ],
+      "id": "GlUtY4yKPeDp",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "StvfVkx226jA"
       },
       "source": [
@@ -910,7 +922,7 @@
         "                          metric='euclidean',                      \n",
         "                          cluster_selection_method='eom', prediction_data=True)\n",
         "\n",
-        "vectorizer_model = CountVectorizer(ngram_range=(1, 2), stop_words=\"english\", min_df=2)\n"
+        "vectorizer_model = CountVectorizer(ngram_range=(1, 1), stop_words=\"english\", min_df=2)\n"
       ],
       "id": "RqbhA8K2S3Cm",
       "execution_count": null,
@@ -938,18 +950,6 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Qkupql2cXP6u"
-      },
-      "source": [
-        "topic_freq"
-      ],
-      "id": "Qkupql2cXP6u",
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
         "id": "bFiD4jIi6DZn"
       },
       "source": [
@@ -971,11 +971,29 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "yD01-Ws7VACh"
+      },
+      "source": [
+        "rawTopics = topic_model.get_topics()\n",
+        "listTopics = pd.DataFrame.from_dict(data=rawTopics)\n",
+        "keysTpopic = list(listTopics.iloc[0].index)\n",
+        "valuesTopic = [element[0] for element in listTopics.iloc[0]]\n",
+        "dTopic = dict(zip(keysTpopic,valuesTopic))\n",
+        "topic_freq['TopicName'] = list(map(dTopic.get, topic_freq['Topic']))\n",
+        "topic_freq"
+      ],
+      "id": "yD01-Ws7VACh",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "SgiYB3av6yeg"
       },
       "source": [
         "for i in topic_freq['Topic']:\n",
-        "  print(f\"There are {topic_freq['Count'].iloc[i]} documents that are talking about topic ID {topic_freq['Topic'].iloc[i]}\")"
+        "  print(f\"There are {topic_freq['Count'].iloc[i]} documents that are talking about topic ID '{topic_freq['TopicName'].iloc[i]}'.\")"
       ],
       "id": "SgiYB3av6yeg",
       "execution_count": null,
@@ -990,6 +1008,54 @@
         "topic_model.visualize_topics()"
       ],
       "id": "HHDEzS4V7BBu",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "u19GB7RlSL81"
+      },
+      "source": [
+        "\n",
+        "docs_df['Topic'] = cluster.labels_\n",
+        "docs['Doc_ID'] = range(len(docs))\n",
+        "docs_per_topic = docs_df.groupby(['Topic'], as_index = False).agg({'Doc': ' '.join})\n",
+        "\n",
+        "def c_tf_idf(documents, m, ngram_range=(1, 1)):\n",
+        "    count = CountVectorizer(ngram_range=ngram_range, stop_words=\"english\").fit(documents)\n",
+        "    t = count.transform(documents).toarray()\n",
+        "    w = t.sum(axis=1)\n",
+        "    tf = np.divide(t.T, w)\n",
+        "    sum_t = t.sum(axis=0)\n",
+        "    idf = np.log(np.divide(m, sum_t)).reshape(-1, 1)\n",
+        "    tf_idf = np.multiply(tf, idf)\n",
+        "\n",
+        "    return tf_idf, count\n",
+        "  \n",
+        "tf_idf, count = c_tf_idf(docs_per_topic.Doc.values, m=len(data))\n",
+        "\n",
+        "def extract_top_n_words_per_topic(tf_idf, count, docs_per_topic, n=20):\n",
+        "    words = count.get_feature_names()\n",
+        "    labels = list(docs_per_topic.Topic)\n",
+        "    tf_idf_transposed = tf_idf.T\n",
+        "    indices = tf_idf_transposed.argsort()[:, -n:]\n",
+        "    top_n_words = {label: [(words[j], tf_idf_transposed[i][j]) for j in indices[i]][::-1] for i, label in enumerate(labels)}\n",
+        "    return top_n_words\n",
+        "\n",
+        "def extract_topic_sizes(df):\n",
+        "    topic_sizes = (df.groupby(['Topic'])\n",
+        "                     .Doc\n",
+        "                     .count()\n",
+        "                     .reset_index()\n",
+        "                     .rename({\"Topic\": \"Topic\", \"Doc\": \"Size\"}, axis='columns')\n",
+        "                     .sort_values(\"Size\", ascending=False))\n",
+        "    return topic_sizes\n",
+        "\n",
+        "top_n_words = extract_top_n_words_per_topic(tf_idf, count, docs_per_topic, n=20)\n",
+        "topic_sizes = extract_topic_sizes(docs_df); topic_sizes.head(10)"
+      ],
+      "id": "u19GB7RlSL81",
       "execution_count": null,
       "outputs": []
     },
