Added most Common Tag in Text to each Paper

--- a/AsuD_CAPTUM_v0.1.ipynb
+++ b/AsuD_CAPTUM_v0.1.ipynb
@@ -490,6 +490,18 @@
       "outputs": []
     },
     {
+      "cell_type": "code",
+      "metadata": {
+        "id": "PgFbNx-hn45t"
+      },
+      "source": [
+        "df"
+      ],
+      "id": "PgFbNx-hn45t",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "BPVoM5XU5WGq"
@@ -542,18 +554,6 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "GlUtY4yKPeDp"
-      },
-      "source": [
-        "df['Tags']"
-      ],
-      "id": "GlUtY4yKPeDp",
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
         "id": "StvfVkx226jA"
       },
       "source": [
@@ -562,6 +562,43 @@
         "print(*tags, sep=\"\\n\")"
       ],
       "id": "StvfVkx226jA",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "UZp-zM-on99y"
+      },
+      "source": [
+        "def retMostFrequentTag (text,setOfTags=tags):\n",
+        "  occ = 0\n",
+        "  mostFrequentTag = None\n",
+        "  lowerListOfTags = [tag.lower() for tag in setOfTags]\n",
+        "  for tag in lowerListOfTags:\n",
+        "    n_occ = text.count(tag)\n",
+        "    if n_occ > occ:\n",
+        "        occ = n_occ\n",
+        "        mostFrequentTag = tag\n",
+        "    else:\n",
+        "      next\n",
+        "  return mostFrequentTag\n",
+        "\n",
+        "df['Class'] = df['Corpus'].apply(retMostFrequentTag)"
+      ],
+      "id": "UZp-zM-on99y",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "2jxnV04csZnz"
+      },
+      "source": [
+        "df"
+      ],
+      "id": "2jxnV04csZnz",
       "execution_count": null,
       "outputs": []
     },
