Anpassungen an BERTopic

--- a/AsuD_CAPTUM_v0.1.ipynb
+++ b/AsuD_CAPTUM_v0.1.ipynb
@@ -939,7 +939,7 @@
         "\n",
         "transformer_model = SentenceTransformer(transformer_name)\n",
         "docs = df[korpus_name]\n",
-        "embeddings = transformer_model.encode(docs, show_progress_bar=True)"
+        "#embeddings = transformer_model.encode(docs, show_progress_bar=True)"
       ],
       "id": "fj47Zp5HHis1",
       "execution_count": null,
@@ -973,12 +973,14 @@
       "source": [
         "topic_model = BERTopic(language=\"english\", \n",
         "                       calculate_probabilities=True,    # We need the probabilities to visualize\n",
+        "                       top_n_words=5,\n",
         "                       #seed_topic_list = list(tags),\n",
+        "                       embedding_model = transformer_model,\n",
         "                       umap_model = umap_model,\n",
         "                       hdbscan_model = hdbscan_model,\n",
         "                       vectorizer_model = vectorizer_model\n",
         "                       )\n",
-        "topics, probs = topic_model.fit_transform(docs, embeddings)"
+        "topics, probs = topic_model.fit_transform(docs)"
       ],
       "id": "ELTFNj8VXCAQ",
       "execution_count": null,
@@ -1039,60 +1041,24 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "HHDEzS4V7BBu"
+        "id": "1m8WV5JkzkRS"
       },
       "source": [
-        "topic_model.visualize_topics()"
+        "topic_model.get_topics()"
       ],
-      "id": "HHDEzS4V7BBu",
+      "id": "1m8WV5JkzkRS",
       "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "u19GB7RlSL81"
+        "id": "SiiBYn1b1g1w"
       },
       "source": [
-        "\n",
-        "docs_df['Topic'] = cluster.labels_\n",
-        "docs['Doc_ID'] = range(len(docs))\n",
-        "docs_per_topic = docs_df.groupby(['Topic'], as_index = False).agg({'Doc': ' '.join})\n",
-        "\n",
-        "def c_tf_idf(documents, m, ngram_range=(1, 1)):\n",
-        "    count = CountVectorizer(ngram_range=ngram_range, stop_words=\"english\").fit(documents)\n",
-        "    t = count.transform(documents).toarray()\n",
-        "    w = t.sum(axis=1)\n",
-        "    tf = np.divide(t.T, w)\n",
-        "    sum_t = t.sum(axis=0)\n",
-        "    idf = np.log(np.divide(m, sum_t)).reshape(-1, 1)\n",
-        "    tf_idf = np.multiply(tf, idf)\n",
-        "\n",
-        "    return tf_idf, count\n",
-        "  \n",
-        "tf_idf, count = c_tf_idf(docs_per_topic.Doc.values, m=len(data))\n",
-        "\n",
-        "def extract_top_n_words_per_topic(tf_idf, count, docs_per_topic, n=20):\n",
-        "    words = count.get_feature_names()\n",
-        "    labels = list(docs_per_topic.Topic)\n",
-        "    tf_idf_transposed = tf_idf.T\n",
-        "    indices = tf_idf_transposed.argsort()[:, -n:]\n",
-        "    top_n_words = {label: [(words[j], tf_idf_transposed[i][j]) for j in indices[i]][::-1] for i, label in enumerate(labels)}\n",
-        "    return top_n_words\n",
-        "\n",
-        "def extract_topic_sizes(df):\n",
-        "    topic_sizes = (df.groupby(['Topic'])\n",
-        "                     .Doc\n",
-        "                     .count()\n",
-        "                     .reset_index()\n",
-        "                     .rename({\"Topic\": \"Topic\", \"Doc\": \"Size\"}, axis='columns')\n",
-        "                     .sort_values(\"Size\", ascending=False))\n",
-        "    return topic_sizes\n",
-        "\n",
-        "top_n_words = extract_top_n_words_per_topic(tf_idf, count, docs_per_topic, n=20)\n",
-        "topic_sizes = extract_topic_sizes(docs_df); topic_sizes.head(10)"
+        "topic_model.visualize_topics()"
       ],
-      "id": "u19GB7RlSL81",
+      "id": "SiiBYn1b1g1w",
       "execution_count": null,
       "outputs": []
     },
