--- a/AsuD_CAPTUM_v0.1.ipynb
+++ b/AsuD_CAPTUM_v0.1.ipynb
@@ -1032,7 +1032,7 @@
       },
       "source": [
         "for i in topic_freq['Topic']:\n",
-        "  print(f\"There are {topic_freq['Count'].iloc[i]} documents that are talking about topic ID '{topic_freq['TopicName'].iloc[i]}'.\")"
+        "  print(f\"There are {topic_freq['Count'].iloc[i]} documents that are talking about topic ID {topic_freq['Topic'].iloc[i]} with Titel '{topic_freq['TopicName'].iloc[i]}'.\")"
       ],
       "id": "SgiYB3av6yeg",
       "execution_count": null,
@@ -1059,6 +1059,21 @@
         "topic_model.visualize_topics()"
       ],
       "id": "SiiBYn1b1g1w",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "DYt5hRz14syE"
+      },
+      "source": [
+        "dfBERTopic = df[['Authors', 'Year', 'Tags', 'Corpus', 'Class']]\n",
+        "dfBERTopic['Topic'] = topics\n",
+        "dfBERTopic['DocID'] = range(len(dfBERTopic))\n",
+        "dfBERTopic"
+      ],
+      "id": "DYt5hRz14syE",
       "execution_count": null,
       "outputs": []
     },
